change report and imgs